<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="7">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#ff9bddff">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/assigments"
                android:id="@+id/assignmentTextView"
                android:textSize="22sp"
                android:textStyle="bold"
                android:paddingStart="20dip"
                android:layout_gravity="center_vertical"
                android:layout_weight="2"
                />
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:layout_gravity="center_vertical"
                android:id = "@+id/assignTextEdit" />

        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#fffffc87">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/participation"
                android:id="@+id/participationTextView"
                android:textSize="22sp"
                android:textStyle="bold"
                android:paddingStart="20dip"
                android:layout_gravity="center_vertical"
                android:layout_weight="2"
                />
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:layout_gravity="center_vertical"
                android:id = "@+id/participationTextEdit" />

        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#ff71ff68">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/project"
                android:id="@+id/projectTextView"
                android:textSize="22sp"
                android:textStyle="bold"
                android:paddingStart="20dip"
                android:layout_gravity="center_vertical"
                android:layout_weight="2"
                />
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:layout_gravity="center_vertical"
                android:id = "@+id/projectTextEdit" />

        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#ff7cf6ff">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/quiz"
                android:id="@+id/quizTextView"
                android:textSize="22sp"
                android:textStyle="bold"
                android:paddingStart="20dip"
                android:layout_gravity="center_vertical"
                android:layout_weight="2"
                />
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:layout_gravity="center_vertical"
                android:id = "@+id/quizTextEdit" />

        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#ffffb066">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/exam"
                android:id="@+id/examTextView"
                android:textSize="22sp"
                android:textStyle="bold"
                android:paddingStart="20dip"
                android:layout_gravity="center_vertical"
                android:layout_weight="2"
                />
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:layout_gravity="center_vertical"
                android:id = "@+id/examTextEdit" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#ffffb066">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/setExamMark"
                android:id="@+id/textView"
                android:textSize="14sp"
                android:paddingStart="20dip"
                android:layout_gravity="center_vertical"
                android:layout_weight="1" />

            <SeekBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/seekBar"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:layout_column="1" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#ffff172c">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/finalMark"
                android:id="@+id/finalText"
                android:textSize="22sp"
                android:textStyle="bold"
                android:paddingStart="20dip"
                android:layout_gravity="center_vertical"
                android:layout_weight="2"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:layout_gravity="center_vertical"
                android:id = "@+id/finalMarkTextView" />

        </TableRow>

    </TableLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset"
        android:id="@+id/resetButton"
        android:layout_gravity="center_horizontal" />
</LinearLayout>
